# settlers-of-irata-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  mule.py  pyproject.toml
mule_tui/: __init__.py  app.py  engine.py  screens.py  tiles.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
screenshots/candidates/: README.md
settlers_of_irata_tui/: __init__.py  app.py  engine.py  screens.py  tui.tcss
tests/: perf.py  playtest.py  qa.py
